src/test/ui/methods/method-ambig-two-traits-cross-crate.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/method-ambig-two-traits-cross-crate.rs:11:21
   |
LL | fn main() { 1_usize.me(); }
   |                     ^^ multiple `me` found
   |
note: candidate #1 is defined in an impl of the trait `Me2` for the type `usize`
  --> $DIR/method-ambig-two-traits-cross-crate.rs:10:22
   |
LL | impl Me2 for usize { fn me(&self) -> usize { *self } }
   |                      ^^^^^^^^^^^^^^^^^^^^^
   = note: candidate #2 is defined in an impl of the trait `ambig_impl_2_lib::Me` for the type `usize`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0034`.
